shopify-app/ocp/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antipilug-backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antipilug-backend
  template:
    metadata:
      labels:
        app: antipilug-backend
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: antipilug-backend
        image: liorshem/antipilug-backend:latest
        ports:
        - containerPort: 5000
        imagePullPolicy: Always
