shopify-app/ocp/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: antipilug-frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: antipilug-frontend
  template:
    metadata:
      labels:
        app: antipilug-frontend
    spec:
      imagePullSecrets:
      - name: dockerhub-secret
      containers:
      - name: antipilug-frontend
        image: liorshem/antipilug-frontend:latest
        ports:
        - containerPort: 3000
