shopify-app/ocp/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: antipilug-frontend
spec:
  selector:
    app: antipilug-frontend
  ports:
  - port: 3000
    targetPort: 3000
