shopify-app/ocp/backend-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: antipilug-backend
spec:
  to:
    kind: Service
    name: antipilug-frontend
  port:
    targetPort: 5000
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
