shopify-app/ocp/db-route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: antipilug-mongodb
  namespace: antipilug
spec:
  to:
    kind: Service
    name: mongodb
    weight: 100
  port:
    targetPort: 27017
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Allow
  wildcardPolicy: None
